<resources>
    <string name="app_name">AParking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Открыть меню</string>
    <string name="close">Закрыть меню</string>
    <string name="sessions_header">Парковочные сессии</string>
    <string name="current_session_date">06.05.2023</string>
    <string name="current_session_header">Текущая сессия</string>
    <string name="current_parking_time">Парковочное время</string>
    <string name="current_session_time">01:26:23</string>
    <string name="parking_place">Парковочное место</string>
    <string name="my_car">Мой автомобиль</string>
    <string name="parking_address">Адрес парковки</string>
    <string name="parking_time">Время стоянки</string>
    <string name="purchase">Оплатить</string>
    <string name="to_pay">К оплате</string>
    <string name="debt">Задолженность</string>
    <string name="purchased">Оплачено</string>
    <string name="load">Загрузка</string>
    <string name="condition">Статус</string>
    <string name="free">Свободно</string>
    <string name="distance_to_parking_place">Дистанция до парковки</string>
    <string name="show_path">Построить маршрут</string>
    <string name="occupied">Занято:</string>
    <string name="free_progress">Свободно:</string>
    <string name="number_unpaid_header">Неоплаченные сессии (%1$d)</string>
    <string name="history">История</string>
    <string name="unpaid_header">Неоплаченные сессии</string>
    <string name="clear_history">Очистить историю</string>
    <string name="distance">%1$d м</string>
    <string name="car_brand">Марка автомобиля</string>
    <string name="car_number">Гос номер</string>
    <string name="being_used">Сейчас используется</string>
    <string name="will_use">Поеду на нем</string>
    <string name="my_cars">Мои автомобили</string>
    <string name="finished_session">Текущая парковочная сессия закрыта</string>
</resources>