<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/holder_rounded_white"
    android:paddingVertical="20dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/session_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_session_date"
        android:textSize="14sp"
        android:layout_marginStart="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border_white"
        android:paddingVertical="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parking_time"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">
            <TextView
                android:id="@+id/timePassed"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="02:03:24"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/timePeriod"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="8:32 - 10:35"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border_white"
        android:paddingVertical="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/parking_address"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/parking_place"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">
            <TextView
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="ул. Такая-то, д. Х/хх"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/place_code"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="А22"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border_white"
        android:paddingVertical="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_car"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">
            <TextView
                android:id="@+id/car_brand"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Nissan Какой-то 2"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/car_code"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="777 KNS | 02"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_car"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginVertical="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="289.64"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_button"
        android:text="@string/purchase" />
</LinearLayout>