<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border_white"
        android:paddingVertical="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parking_address"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="ул. Такая-то, д. Х/хх"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border_white"
        android:paddingVertical="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condition"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/free"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_to_parking_place"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="500 м"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/route_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_with_border"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_route"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_path"
            android:textColor="#000000"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/beige"
        android:paddingVertical="20dp">

        <LinearLayout
            android:id="@+id/parking_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_parking_symbol"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Начинаю парковаться"
                android:textColor="#000000"
                android:textSize="18sp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>