<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="4dp"
    android:background="@color/white">
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/payment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="42dp"
        android:text="@string/purchase"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/payment_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:text="289.64"
        android:textSize="14sp"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/payment_button">
    </TextView>

    <TextView
        android:id="@+id/payment_amount_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/to_pay"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/payment_amount">
    </TextView>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/payment_amount_label" />

    <TextView
        android:id="@+id/parking_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:text="02:03:24"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider">
    </TextView>

    <TextView
        android:id="@+id/parking_time_period"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:text="8:32 - 10:35"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/parking_time"
        app:layout_constraintBottom_toTopOf="@id/divider">
    </TextView>

    <TextView
        android:id="@+id/parking_time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/parking_time"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/parking_time">
    </TextView>

    <TextView
        android:id="@+id/finished_session_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:paddingHorizontal="12dp"
        android:paddingVertical="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/finished_session"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/parking_time_label"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/exclamation_point_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="-24dp"
        app:layout_constraintStart_toStartOf="@id/finished_session_label"
        app:layout_constraintEnd_toEndOf="@id/finished_session_label"
        app:layout_constraintBottom_toTopOf="@id/finished_session_label"
        app:srcCompat="@drawable/ic_exclamation_point" />

    <View
        android:id="@+id/bottom_fragment_sign"
        android:layout_width="30dp"
        android:layout_height="3dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bottom_fragment_sign"
        app:layout_constraintStart_toStartOf="@id/exclamation_point_icon"
        app:layout_constraintEnd_toEndOf="@id/exclamation_point_icon"
        app:layout_constraintBottom_toTopOf="@id/exclamation_point_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>